--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,14 @@
 Source: dbix-easy-perl
 Section: interpreters
 Priority: optional
-Maintainer: Dennis Schoen <dschoen@rio.gt.owl.de>
+Maintainer: Dennis Schoen <dennis@debian.org>
 Standards-Version: 3.0.1
+Build-Depends: debhelper
 
 Package: libdbix-easy-perl
 Architecture: all
 Depends: ${perl:Depends}, libdbi-perl
-Recommends: libterm-readkey-perl
+Recommends: libterm-readkey-perl, libtext-csv-perl
 Description: Easy to Use DBI Interface
  DBIx::Easy is an easy to use DBI interface.
  Currently only the Pg, mSQL and mysql drivers are supported.
