--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,7 @@ build-stamp:
 	
 	# Add here commands to compile the package.
 	$(PERL) Makefile.PL $(config)
-	$(MAKE) OPTIMIZE="-O2 -g -Wall"
+	$(MAKE)
 	
 	touch build-stamp
 
@@ -33,6 +33,7 @@ clean:
 	rm -f build-stamp
 
 	# Add here commands to clean up after the build process.
+	-$(MAKE) distclean
 	dh_clean
 
 install: build
@@ -56,27 +57,27 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 #	dh_installdebconf	
-	dh_installdocs README
-	dh_installexamples
-	dh_installmenu
+	dh_installdocs README LIESMICH
+#	dh_installexamples
+#	dh_installmenu
 #	dh_installemacsen
 #	dh_installpam
 #	dh_installinit
-	dh_installcron
+#	dh_installcron
 	dh_installmanpages
-	dh_installinfo
+#	dh_installinfo
 #	dh_undocumented dbs_dumptabstruct.1p
 	dh_installchangelogs Changes
-	dh_link
-	dh_strip
+#	dh_link
+#	dh_strip
 	dh_compress
 	dh_fixperms
-	# You may want to make some executables suid here.
-	dh_suidregister
-	dh_makeshlibs
+# You may want to make some executables suid here.
+#	dh_suidregister
+#	dh_makeshlibs
 	dh_installdeb
 	dh_perl
-	dh_shlibdeps
+#	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
