--- a/debian/rules
+++ b/debian/rules
@@ -34,6 +34,12 @@ clean:
 
 # Add here commands to clean up after the build process.
 	-$(MAKE) distclean
+	# Remove the generated html-versions of the Manpages
+	for hf in scripts/*.html; do \
+		if [ -f $$hf ]; then \
+			rm $$hf; \
+		fi; \
+	done
 	dh_clean
 
 install: build
@@ -43,7 +49,7 @@ install: build
 	dh_installdirs
 
 # Add here commands to install the package into debian/tmp.
-	$(MAKE) pure_install DESTDIR=`pwd`/debian/tmp
+	$(MAKE) pure_install DESTDIR=$(TMP)
 	for pf in Easy.pm scripts/*; do \
 		if [ -f $$pf ]; then \
 			pod2html --outfile=$$pf.man.html $$pf; \
