Import of HORNBURG/DBIx-Easy-0.14.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Easy
gitpan-cpan-version:      0.14
gitpan-cpan-path:         HORNBURG/DBIx-Easy-0.14.tar.gz
gitpan-cpan-author:       HORNBURG
gitpan-cpan-maturity:     released

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: interpreters
 Priority: optional
 Maintainer: Dennis Schoen <dennis@debian.org>
 Standards-Version: 3.0.1
-Build-Depends: debhelper
+Build-Depends-Indep: debhelper
 
 Package: libdbix-easy-perl
 Architecture: all
