--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 ---
-abstract: unknown
+abstract: 'Easy to Use DBI interface'
 author:
-  - unknown
+  - 'Stefan Hornburg (Racke) <racke@linuxia.de>'
 build_requires:
   ExtUtils::MakeMaker: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,4 +18,4 @@ no_index:
     - t
     - inc
 requires: {}
-version: 0.19
+version: 0.20
